removed publicly available endpoint to resend verification mails
